Fix spacing between grids in sidebar

--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ button {
     align-items: center;
     border: 1px solid red; 
     padding-top: 1rem;
-    grid-template-rows: 0.2fr minmax(75px, 0.55fr) minmax(50px, 0.25fr);
+    grid-template-rows: 0.125fr minmax(75px, 0.4fr) minmax(50px, 0.25fr);
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
